WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200465
ASSERTION FAILED: m_observers.isEmpty() if WKPageSetPageStateClient is used
https://bugs.webkit.org/show_bug.cgi?id=200465
Summary
ASSERTION FAILED: m_observers.isEmpty() if WKPageSetPageStateClient is used
Fujii Hironori
Reported
2019-08-05 23:25:53 PDT
[WebKit] ASSERTION FAILED: m_observers.isEmpty() if WKPageSetPageStateClient is used After
Bug 199848
, An assertion always fails when terminating WebView if WKPageSetPageStateClient is used. ASSERTION FAILED: m_observers.isEmpty() ..\..\Source\WebKit\UIProcess/PageLoadState.cpp(45) : ~PageLoadState
> WTF.dll!WTFCrash() Line 305 C++ > WebKit2.dll!WTFCrashWithInfo(int, const char *, const char *, int) Line 568 C++ > WebKit2.dll!WebKit::PageLoadState::~PageLoadState() Line 45 C++ > WebKit2.dll!WebKit::WebPageProxy::~WebPageProxy() Line 517 C++ > WebKit2.dll!WebKit::WebPageProxy::~WebPageProxy() Line 494 C++ > WebKit2.dll!WTF::ThreadSafeRefCounted<API::Object,WTF::DestructionThread::Any>::deref::<unnamed-tag>::operator()() Line 77 C++ > WebKit2.dll!WTF::ThreadSafeRefCounted<API::Object,WTF::DestructionThread::Any>::deref() Line 96 C++ > WebKit2.dll!WTF::derefIfNotNull<WebKit::WebPageProxy>(WebKit::WebPageProxy * ptr) Line 45 C++ > WebKit2.dll!WTF::RefPtr<WebKit::WebPageProxy,WTF::DumbPtrTraits<WebKit::WebPageProxy> >::~RefPtr() Line 69 C++ > WebKit2.dll!WebKit::WebView::~WebView() Line 257 C++ > WebKit2.dll!WebKit::WebView::~WebView() Line 253 C++ > WebKit2.dll!WTF::ThreadSafeRefCounted<API::Object,WTF::DestructionThread::Any>::deref::<unnamed-tag>::operator()() Line 77 C++ > WebKit2.dll!WTF::ThreadSafeRefCounted<API::Object,WTF::DestructionThread::Any>::deref() Line 96 C++ > WebKit2.dll!WKRelease(const void * typeRef) Line 47 C++ > MiniBrowserLib.dll!WebKit::WKRetainPtr<const OpaqueWKView *>::~WKRetainPtr() Line 82 C++ > MiniBrowserLib.dll!WebKitBrowserWindow::~WebKitBrowserWindow() Line 34 C++ > MiniBrowserLib.dll!WebKitBrowserWindow::~WebKitBrowserWindow() Line 34 C++ > MiniBrowserLib.dll!WTF::RefCounted<BrowserWindow>::deref() Line 145 C++ > MiniBrowserLib.dll!WTF::derefIfNotNull<BrowserWindow>(BrowserWindow * ptr) Line 45 C++ > MiniBrowserLib.dll!WTF::RefPtr<BrowserWindow,WTF::DumbPtrTraits<BrowserWindow> >::~RefPtr() Line 69 C++ > MiniBrowserLib.dll!MainWindow::~MainWindow() Line 95 C++ > MiniBrowserLib.dll!WTF::RefCounted<MainWindow>::deref() Line 145 C++ > MiniBrowserLib.dll!WTF::derefIfNotNull<MainWindow>(MainWindow * ptr) Line 45 C++ > MiniBrowserLib.dll!WTF::RefPtr<MainWindow,WTF::DumbPtrTraits<MainWindow> >::~RefPtr() Line 69 C++ > MiniBrowserLib.dll!MainWindow::WndProc(HWND__ * hWnd, unsigned int message, unsigned __int64 wParam, __int64 lParam) Line 270 C++ > [External Code] > WebKit2.dll!WebCore::WindowMessageBroadcaster::SubclassedWndProc(HWND__ * hwnd, unsigned int message, unsigned __int64 wParam, __int64 lParam) Line 123 C++ > [External Code] > WebKit.dll!WebKitMessageLoop::run(HACCEL__ * hAccelTable) Line 94 C++ > MiniBrowserLib.dll!wWinMain(HINSTANCE__ * hInstance, HINSTANCE__ * hPrevInstance, wchar_t * lpstrCmdLine, int nCmdShow) Line 97 C++ > MiniBrowserLib.dll!dllLauncherEntryPoint(HINSTANCE__ * hInstance, HINSTANCE__ * hPrevInstance, wchar_t * lpstrCmdLine, int nCmdShow) Line 115 C++ > MiniBrowser.exe!wWinMain(HINSTANCE__ * hInstance, HINSTANCE__ * hPrevInstance, wchar_t * lpstrCmdLine, int nCmdShow) Line 232 C++ > [External Code]
Attachments
Patch
(3.20 KB, patch)
2019-08-06 00:22 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-08-06 00:22:35 PDT
Created
attachment 375611
[details]
Patch
Fujii Hironori
Comment 2
2019-08-06 18:45:29 PDT
Comment on
attachment 375611
[details]
Patch Clearing flags on attachment: 375611 Committed
r248336
: <
https://trac.webkit.org/changeset/248336
>
Fujii Hironori
Comment 3
2019-08-06 18:45:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-08-06 18:48:45 PDT
<
rdar://problem/54014523
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug